# Generated by Django 4.2.10 on 2026-04-13 00:00

import uuid

from django.db import migrations, models
import django.utils.timezone


class Migration(migrations.Migration):
    initial = True

    dependencies = []

    operations = [
        migrations.CreateModel(
            name="InteractionEvent",
            fields=[
                ("id", models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name="ID")),
                ("event_id", models.UUIDField(default=uuid.uuid4, editable=False, unique=True)),
                (
                    "event_type",
                    models.CharField(
                        choices=[
                            ("search_performed", "search_performed"),
                            ("product_clicked", "product_clicked"),
                            ("product_viewed", "product_viewed"),
                            ("cart_viewed", "cart_viewed"),
                            ("cart_item_added", "cart_item_added"),
                            ("cart_item_removed", "cart_item_removed"),
                            ("cart_item_quantity_updated", "cart_item_quantity_updated"),
                            ("checkout_started", "checkout_started"),
                            ("order_created", "order_created"),
                            ("order_paid", "order_paid"),
                            ("order_cancelled", "order_cancelled"),
                            ("order_completed", "order_completed"),
                            ("chat_started", "chat_started"),
                            ("chat_message_sent", "chat_message_sent"),
                        ],
                        max_length=64,
                    ),
                ),
                ("user_id", models.IntegerField(blank=True, null=True)),
                ("session_id", models.CharField(blank=True, db_index=True, max_length=64, null=True)),
                ("product_id", models.IntegerField(blank=True, db_index=True, null=True)),
                ("query_text", models.CharField(blank=True, max_length=255, null=True)),
                ("source", models.CharField(default="backend", max_length=32)),
                ("signal_weight", models.IntegerField(default=0)),
                ("timestamp", models.DateTimeField(db_index=True, default=django.utils.timezone.now)),
                ("metadata", models.JSONField(blank=True, default=dict)),
                ("created_at", models.DateTimeField(auto_now_add=True)),
            ],
            options={
                "ordering": ["-timestamp", "-id"],
            },
        ),
        migrations.AddIndex(
            model_name="interactionevent",
            index=models.Index(fields=["event_type", "timestamp"], name="interactio_event_t_6af1ec_idx"),
        ),
        migrations.AddIndex(
            model_name="interactionevent",
            index=models.Index(fields=["user_id", "timestamp"], name="interactio_user_id_774393_idx"),
        ),
        migrations.AddIndex(
            model_name="interactionevent",
            index=models.Index(fields=["product_id", "timestamp"], name="interactio_product_4bd868_idx"),
        ),
    ]
